--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-REACT_APP_API_BASE_URL=http://localhost:3000
+REACT_APP_API_BASE_URL1=http://localhost:3000
+REACT_APP_API_BASE_URL= https://backend-ecommerce-furniture.onrender.com
